--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.7.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
