--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "yup": "^1.2.0"
