--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node server.js",
+    "dev": "nodemon server",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
