--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,17 @@
     "@tanstack/react-table": "^8.10.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.4.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
     "formik": "^2.4.2",
+    "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
