--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.10.6",
+    "antd": "^5.11.1",
+    "antd-img-crop": "^4.17.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
@@ -30,6 +32,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "yup": "^1.2.0"
